--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,6 +86,11 @@ backdrop-filter: blur(12px);
 -webkit-backdrop-filter: blur(16px);
 }
 
+.grid-bg{
+  background-image: radial-gradient(#a570bc 1.5px, transparent 1.5px);
+background-size: 32px 32px;
+background-color: #090b09;
+}
 
 
 @layer base {
